--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Sonsie+One&display=swap');
+
 /*body style */
+header{
+    font-family: Sonsie One, sans-serif;
+    font-size: 25px;
+    color: rgb(58, 58, 58);
+    margin-top: 5px;
+    margin-left: 15%;
+}
 body {
-    background-color: rgb(251, 241, 219);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
+    background-color: rgb(213, 213, 213);
+    margin-left: 25%;
 }
 
-/*cards style */
-.board {
-    padding:25px;
-    border-radius: 10px;
-    background: rgb(184, 156, 156);
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-}
 
+/*game area*/
 .box, .boxes, .view {
    list-style-type: none;
    display: flex;
@@ -23,10 +23,14 @@ body {
 } 
 
 .boxes {
-    height: 400px;
-    width: 400px;
+    width: 600px;
+    height: 600px;
+    position: relative;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: start;
+    background-color: #fff;
+    border-radius: 4%;
+    border: 15px solid rgb(58, 58, 58);
 }
 
 .boxes .box{
@@ -71,14 +75,13 @@ body {
     transition: transform 0.25s linear;
 
 }
-
 .box .green img{
-    width: 19px;
+    width: 120px;
 }
 .box .back img{
-    max-width: 45px;
+    max-width: 120px;
 }
-.box .back{
+.box .back {
     transform: rotateY(-180deg);
 }
 .box.flip .back{
