--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,54 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Sonsie+One&display=swap');
 
-
-.cards {
-    list-style-type: none;
-    width: 600px;
-    height: 600px;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px;
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-}
-.front img, .back img{
-    width:150px;
-    height:150px;
-}
-/* Position front and back side */
-.card{
-    position: relative;
-    width: 45px;
-    height: 45px;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-}
-
-/* Horizontal flip when the mouse over the flip box area */
-.card.flip {
-    transform: rotateY(180deg);
-}
-
-/* Position the front and back side */
-.front, .back {
-    position: absolute;
-    width: 45px;
-    height: 45px;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-/*Style front side */
-.front {
-    background-color: #bbb;
-}
-/*Style back side  */
-.back {
-    transform: rotateY(180deg);
-}
-/* Body style */
- header{
+header{
     font-family: Sonsie One, sans-serif;
     font-size: 25px;
     color: rgb(58, 58, 58);
@@ -59,6 +11,101 @@ body {
     background-color: rgb(213, 213, 213);
     margin-left: 25%;
 }
+
+.front img, .back img{
+    width:150px;
+    height:150px;
+    position: absolute;
+    
+}
+
+.board {
+    width: 600px;
+    height: 600px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .card {
+    position: relative;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+  }
+  
+  .card.flipped {
+    transform: rotateY(180deg);
+  }
+  
+  .view {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    line-height: 260px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    font-size: 40px;
+    backface-visibility: hidden;
+    
+  }
+    
+  .back{
+    transform: rotateY(180deg);
+  }
+  
+
+/* .cards {
+    
+    width: 600px;
+    height: 600px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    }  
+
+.card.flipped {
+    transform: rotateY(180deg);
+    transform-style: preserve-3d;
+    transform-origin: center right;
+    transition: transform 1s;
+}  */
+
+/* Position front and back side */
+/* .card{
+    position: relative;
+    width: 45px;
+    height: 45px;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+} */
+
+/* Horizontal flip when the mouse over the flip box area */
+/* .card.flip {
+    transform: rotateY(180deg);
+}  */
+
+/* Position the front and back side */
+/* .front, .back {
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+} */
+/*Style front side */
+/* .front {
+    background-color: #bbb;
+} */
+/*Style back side  */
+/* .back {
+    transform: rotateY(180deg);
+} */
+/* Body style */
 
 
 /* Game area 
