--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,61 +2,105 @@
 
 header{
     font-family: Sonsie One, sans-serif;
-    font-size: 25px;
+    font-size: 20px;
     color: rgb(58, 58, 58);
-    margin-top: 5px;
-    margin-left: 15%;
+    margin-left: 20%;
 }
+
 body {
     background-color: rgb(213, 213, 213);
     margin-left: 25%;
 }
 
+.wrap {
+    width: 700px;
+    height: 700px;
+    border: 3px solid #f1f1f1;
+    border-radius: 4%;
+    position: absolute;
+    margin-left: 30px;
+    margin-top: -5px;
+}
 .front img, .back img{
     width:150px;
     height:150px;
-    position: absolute;
-    
+    position: relative;
+    margin-left: -57%; /*front and back card same position*/    
 }
 
 .board {
-    width: 600px;
-    height: 600px;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px;
-    position: relative;
+    width: 700px;
+    height: 700px;
+    /* border: 3px solid #f1f1f1;
+    border-radius: 4%; */
     display: flex;
     flex-wrap: wrap;
+    position: relative;
+    
+    /* margin: 45px;
+    padding: 10px; */
+    /* position: relative;
+    box-sizing: border-box;
+    display: grid;
+  --num-cols: 4;
+  --row-height: 155px;    
+    grid-template-columns: repeat(var(--num-cols), 2fr);
+    grid-auto-rows: var(--row-height);
+    padding: 16px; */
   }
   
   .card {
     position: relative;
-    transition: transform 1s;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    margin: 5px 0 0 100px;
+    padding: 5px;
     transform-style: preserve-3d;
+    transform-origin: center;
+    transition: transform 1s;
   }
   
   .card.flipped {
-    transform: rotateY(180deg);
+    transform:translateX(35%) rotateY(180deg);
+    /* transform: rotateY(180deg);
+    transform-style: preserve-3d;
+    transform-origin: center right;
+    transition: transform 1s; */
   }
   
   .view {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    line-height: 260px;
-    color: white;
-    text-align: center;
-    font-weight: bold;
-    font-size: 40px;
+    width: 70px;
+    height: 70px;
     backface-visibility: hidden;
-    
   }
     
-  .back{
+  .back {
     transform: rotateY(180deg);
-  }
-  
 
+  }
+
+  .card.shake{
+    animation: shake 0.35s ease-in-out;
+  }
+  @keyframes shake {
+    0%, 100%{
+      transform: translateX(0);
+    }
+    20%{
+      transform: translateX(-13px);
+    }
+    40%{
+      transform: translateX(13px);
+    }
+    60%{
+      transform: translateX(-8px);
+    }
+    80%{
+      transform: translateX(8px);
+    }
+  }
 /* .cards {
     
     width: 600px;
@@ -66,9 +110,9 @@ body {
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    }  
+    }   */
 
-.card.flipped {
+/* .card.flipped {
     transform: rotateY(180deg);
     transform-style: preserve-3d;
     transform-origin: center right;
